Got remote pycharm debugger working

--- a/k8s/kubernetes.yaml
+++ b/k8s/kubernetes.yaml
@@ -21,3 +21,5 @@ spec:
           env:
             - name: APP_ENV
               value: "local"
+            - name: DEBUG
+              value: "False"
