--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ fastapi = "^0.68.1"
 uvicorn = "^0.15.0"
 alembic = "^1.7.3"
 pydantic = {extras = ["dotenv"], version = "^1.8.2"}
+pydevd-pycharm = "^213.3714.452"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -17,6 +18,3 @@ pytest = "^5.2"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
-
-[tool.poetry.scripts]
-start = "uvicorn --factory spend_api.main:init_app"
