--- a/spend_api/local.env
+++ b/spend_api/local.env
@@ -1,1 +1,6 @@
 PROJECT_NAME="spend-api"
+DB_USER="spend_api_user"
+DB_PASS="password"
+DB_HOST="spend-api-db.default.svc.cluster.local"
+DB_NAME="spend_api_db"
+DB_PORT="5432"
